--- a/index.html
+++ b/index.html
@@ -2,45 +2,25 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<title>DVD Bounce Launcher</title>
+<title>DVD Bounce Launcher — Ultimate Edition</title>
+
 <style>
     body {
-        background: #111;
-        color: white;
-        font-family: Arial, sans-serif;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-top: 20px;
-    }
-
-    #container {
-        width: 600px;
-        height: 400px;
-        border: 3px solid white;
-        position: relative;
+        margin: 0;
         overflow: hidden;
         background: #000;
-        cursor: crosshair;
-    }
-
-    #dvd {
-        width: 80px;
-        height: 40px;
-        background: #0ff;
-        position: absolute;
-        left: 260px;
-        top: 180px;
-        border-radius: 8px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-weight: bold;
-        user-select: none;
+        font-family: Arial, sans-serif;
+        color: white;
     }
 
     #ui {
-        margin-top: 15px;
+        position: fixed;
+        top: 10px;
+        left: 10px;
+        z-index: 20;
+        background: rgba(0,0,0,0.4);
+        padding: 8px 12px;
+        border-radius: 6px;
         display: flex;
         gap: 20px;
         align-items: center;
@@ -50,15 +30,56 @@
         font-size: 16px;
         padding: 4px 8px;
     }
+
+    #dvd {
+        width: 100px;
+        height: 50px;
+        background: #ff0000;
+        position: absolute;
+        border-radius: 8px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: bold;
+        user-select: none;
+        color: black;
+    }
+
+    .trail {
+        position: absolute;
+        width: 100px;
+        height: 50px;
+        border-radius: 8px;
+        pointer-events: none;
+        opacity: 0.4;
+    }
+
+    #aimLine {
+        position: absolute;
+        pointer-events: none;
+        z-index: 5;
+    }
+
+    #flash {
+        position: fixed;
+        inset: 0;
+        background: white;
+        opacity: 0;
+        pointer-events: none;
+        z-index: 50;
+    }
+
+    #effects {
+        position: fixed;
+        inset: 0;
+        pointer-events: none;
+        z-index: 40;
+        overflow: visible;
+    }
 </style>
 </head>
+
 <body>
-
-<h2>DVD Bounce Launcher</h2>
-
-<div id="container">
-    <div id="dvd">DVD</div>
-</div>
 
 <div id="ui">
     <div>Bounces: <span id="bounceCount">0</span></div>
@@ -76,19 +97,78 @@
     </label>
 </div>
 
+<canvas id="aimLine"></canvas>
+<div id="effects"></div>
+<div id="flash"></div>
+
+<div id="dvd">DVD</div>
+
 <script>
 const dvd = document.getElementById("dvd");
-const container = document.getElementById("container");
 const bounceCountEl = document.getElementById("bounceCount");
 const speedSelect = document.getElementById("speedSelect");
+const aimCanvas = document.getElementById("aimLine");
+const ctx = aimCanvas.getContext("2d");
+const effects = document.getElementById("effects");
+const flash = document.getElementById("flash");
 
 let dragging = false;
 let offsetX = 0, offsetY = 0;
 let vx = 0, vy = 0;
 let bounceCount = 0;
 let animating = false;
+let speedMultiplier = 1;
 
-// Drag to aim
+// Resize aiming canvas
+function resizeCanvas() {
+    aimCanvas.width = window.innerWidth;
+    aimCanvas.height = window.innerHeight;
+}
+resizeCanvas();
+window.addEventListener("resize", resizeCanvas);
+
+// Center DVD
+function centerDVD() {
+    dvd.style.left = (window.innerWidth / 2 - dvd.clientWidth / 2) + "px";
+    dvd.style.top = (window.innerHeight / 2 - dvd.clientHeight / 2) + "px";
+}
+centerDVD();
+
+// Color cycle
+let hue = 0;
+function updateColor() {
+    hue = (hue + 1) % 360;
+    dvd.style.background = `hsl(${hue}, 100%, 50%)`;
+}
+setInterval(updateColor, 40);
+
+// Speed change
+speedSelect.addEventListener("change", () => {
+    const val = speedSelect.value;
+
+    if (val === "instant") {
+        animating = false;
+        runInstant();
+        return;
+    }
+
+    speedMultiplier = parseFloat(val);
+});
+
+// Draw dotted aiming line
+function drawAimLine(x1, y1, x2, y2) {
+    ctx.clearRect(0, 0, aimCanvas.width, aimCanvas.height);
+    ctx.setLineDash([4, 6]);
+    ctx.strokeStyle = "white";
+    ctx.lineWidth = 2;
+
+    ctx.beginPath();
+    ctx.moveTo(x1, y1);
+    ctx.lineTo(x2, y2);
+    ctx.stroke();
+}
+
+// Dragging
 dvd.addEventListener("mousedown", e => {
     dragging = true;
     animating = false;
@@ -102,42 +182,106 @@ dvd.addEventListener("mousedown", e => {
 
 document.addEventListener("mousemove", e => {
     if (!dragging) return;
+
     dvd.style.left = (e.clientX - offsetX) + "px";
     dvd.style.top = (e.clientY - offsetY) + "px";
+
+    drawAimLine(
+        window.innerWidth / 2,
+        window.innerHeight / 2,
+        dvd.offsetLeft + dvd.clientWidth / 2,
+        dvd.offsetTop + dvd.clientHeight / 2
+    );
 });
 
 document.addEventListener("mouseup", e => {
     if (!dragging) return;
     dragging = false;
 
-    // Launch velocity based on pull distance
-    const dx = dvd.offsetLeft - 260;
-    const dy = dvd.offsetTop - 180;
+    ctx.clearRect(0, 0, aimCanvas.width, aimCanvas.height);
 
-    vx = dx * 0.15;
-    vy = dy * 0.15;
+    const dx = dvd.offsetLeft - window.innerWidth / 2;
+    const dy = dvd.offsetTop - window.innerHeight / 2;
 
-    const speed = speedSelect.value;
+    vx = dx * 0.15 * speedMultiplier;
+    vy = dy * 0.15 * speedMultiplier;
 
-    if (speed === "instant") {
-        runInstant(dx, dy);
+    if (speedSelect.value === "instant") {
+        runInstant();
     } else {
-        vx *= speed;
-        vy *= speed;
         animating = true;
         requestAnimationFrame(update);
     }
 });
 
-// Instant mode: mathematically compute corner hit
-function runInstant(dx, dy) {
+// Ghost trail
+function spawnTrail() {
+    const t = document.createElement("div");
+    t.className = "trail";
+    t.style.left = dvd.style.left;
+    t.style.top = dvd.style.top;
+    t.style.background = dvd.style.background;
+    t.style.opacity = "0.4";
+    document.body.appendChild(t);
+
+    setTimeout(() => {
+        t.style.transition = "opacity 0.4s";
+        t.style.opacity = "0";
+        setTimeout(() => t.remove(), 400);
+    }, 10);
+}
+
+// Corner celebration
+function celebrate() {
+    flash.style.transition = "none";
+    flash.style.opacity = "1";
+    setTimeout(() => {
+        flash.style.transition = "opacity 0.5s";
+        flash.style.opacity = "0";
+    }, 50);
+
+    for (let i = 0; i < 40; i++) {
+        const p = document.createElement("div");
+        p.style.position = "absolute";
+        p.style.width = "6px";
+        p.style.height = "6px";
+        p.style.background = `hsl(${Math.random()*360},100%,50%)`;
+        p.style.left = dvd.offsetLeft + dvd.clientWidth/2 + "px";
+        p.style.top = dvd.offsetTop + dvd.clientHeight/2 + "px";
+        p.style.borderRadius = "50%";
+        p.style.pointerEvents = "none";
+        effects.appendChild(p);
+
+        const angle = Math.random() * Math.PI * 2;
+        const speed = 4 + Math.random() * 6;
+
+        let vx = Math.cos(angle) * speed;
+        let vy = Math.sin(angle) * speed;
+
+        let life = 30 + Math.random()*20;
+
+        function animateParticle() {
+            p.style.left = (parseFloat(p.style.left) + vx) + "px";
+            p.style.top = (parseFloat(p.style.top) + vy) + "px";
+            vy += 0.2;
+            life--;
+
+            if (life > 0) requestAnimationFrame(animateParticle);
+            else p.remove();
+        }
+        animateParticle();
+    }
+}
+
+// Instant mode
+function runInstant() {
     let x = dvd.offsetLeft;
     let y = dvd.offsetTop;
-    let w = container.clientWidth - dvd.clientWidth;
-    let h = container.clientHeight - dvd.clientHeight;
+    let w = window.innerWidth - dvd.clientWidth;
+    let h = window.innerHeight - dvd.clientHeight;
 
-    let vx = dx * 0.15;
-    let vy = dy * 0.15;
+    let vx = (x - window.innerWidth / 2) * 0.15;
+    let vy = (y - window.innerHeight / 2) * 0.15;
 
     let bounces = 0;
 
@@ -150,25 +294,38 @@ function runInstant(dx, dy) {
         x += vx * t;
         y += vy * t;
 
-        if (Math.abs(x) < 1 || Math.abs(x - w) < 1) vx *= -1, bounces++;
-        if (Math.abs(y) < 1 || Math.abs(y - h) < 1) vy *= -1, bounces++;
+        let hitV = Math.abs(x) < 1 || Math.abs(x - w) < 1;
+        let hitH = Math.abs(y) < 1 || Math.abs(y - h) < 1;
 
-        if ((Math.abs(x) < 1 || Math.abs(x - w) < 1) &&
-            (Math.abs(y) < 1 || Math.abs(y - h) < 1)) break;
+        if (hitV) bounces++;
+        if (hitH) bounces++;
+
+        if (hitV && hitH) break;
+
+        if (hitV) vx *= -1;
+        if (hitH) vy *= -1;
     }
 
     bounceCountEl.textContent = bounces;
+    celebrate();
 }
 
 // Animation loop
 function update() {
     if (!animating) return;
 
+    spawnTrail();
+
+    vx = vx / Math.abs(vx || 1) * Math.abs(vx) * speedMultiplier;
+    vy = vy / Math.abs(vy || 1) * Math.abs(vy) * speedMultiplier;
+
     let x = dvd.offsetLeft + vx;
     let y = dvd.offsetTop + vy;
 
-    const maxX = container.clientWidth - dvd.clientWidth;
-    const maxY = container.clientHeight - dvd.clientHeight;
+    const maxX = window.innerWidth - dvd.clientWidth;
+    const maxY = window.innerHeight - dvd.clientHeight;
+
+    let hitCorner = false;
 
     if (x <= 0 || x >= maxX) {
         vx *= -1;
@@ -179,10 +336,20 @@ function update() {
         bounceCount++;
     }
 
+    if ((x <= 0 || x >= maxX) && (y <= 0 || y >= maxY)) {
+        hitCorner = true;
+    }
+
     bounceCountEl.textContent = bounceCount;
 
     dvd.style.left = Math.max(0, Math.min(maxX, x)) + "px";
     dvd.style.top = Math.max(0, Math.min(maxY, y)) + "px";
+
+    if (hitCorner) {
+        animating = false;
+        celebrate();
+        return;
+    }
 
     requestAnimationFrame(update);
 }
